--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -22,8 +22,8 @@
     <string name="release_to_cancel">松开手指，取消发送</string>
     <string name="send_fail">发送消息失败,</string>
     <string name="delete_message">删除消息</string>
-    <string name="delete_conversation_messages">删除会话和消息</string>
-    <string name="delete_conversation">删除会话</string>
+    <string name="delete_messages">删除消息</string>
+    <string name="delete_contact">删除联系人</string>
     <string name="copy_message">复制消息</string>
     <string name="delete_voice">删除语音</string>
     <string name="delete_video">删除视频</string>
